--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "The source for my personal portfolio",
   "main": "index.html",
   "scripts": {
+    "dev": "gulp watch",
+    "build": "gulp production",
+    "serve": "php -S localhost:8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-livereload": "^3.8.0",
-    "gulp-sass": "^2.3.0",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-sass": "^4.0.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-minify-css": "^1.2.0"
   }
 }
