--- a/projects.json
+++ b/projects.json
@@ -4,7 +4,7 @@
         "title": "BookStack Platform",
         "link": "https://www.bookstackapp.com",
         "description": "An easy-to-use and free platform for sharing documentation.",
-        "skills": ["Laravel", "MySQL", "Angular JS", "PHP"],
+        "skills": ["Laravel", "MySQL", "Webpack", "PHP"],
         "color": "yellow"
     }, {
         "title": "Haste Templating",
