Added blogs posts to danb.me page

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "gulp watch",
     "build": "gulp production",
     "serve": "php -S localhost:8080",
+    "deploy": "rsync -avz --exclude node_modules/ --exclude .git/  ./ dan@sandcat.danb.me:/var/www/danb.me/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
