--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-livereload": "^3.8.0",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-livereload": "^4.0.1",
     "gulp-sass": "^4.0.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-minify-css": "^1.2.0"
+    "gulp-sourcemaps": "^2.6.5",
+    "node-sass": "^4.12.0"
   }
 }
