--- a/data/projects.json
+++ b/data/projects.json
@@ -11,7 +11,7 @@
     ]
   },
   {
-    "title": "BookStack Platform",
+    "title": "BookStack",
     "link": "https://www.bookstackapp.com",
     "description": "An easy-to-use and free platform for sharing documentation.",
     "skills": [
@@ -22,7 +22,7 @@
     ]
   },
   {
-    "title": "Haste Templating",
+    "title": "Haste",
     "link": "https://github.com/ssddanbrown/haste",
     "description": "HTML Awesomely Simple Templating Engine.",
     "skills": [
@@ -32,7 +32,7 @@
     ]
   },
   {
-    "title": "Viewr Image Browser",
+    "title": "Viewr",
     "link": "https://danb.me/viewr/",
     "description": "An image-focused subreddit browser written in VueJS.",
     "skills": [
@@ -43,7 +43,7 @@
     ]
   },
   {
-    "title": "Thermocouples For Android",
+    "title": "Thermocouples",
     "link": "https://play.google.com/store/apps/details?id=com.southerntemp.thermocouples",
     "description": "An app for viewing and calculating thermocouple info.",
     "skills": [
@@ -53,34 +53,13 @@
     ]
   },
   {
-    "title": "Retherm For Android",
+    "title": "Retherm",
     "link": "https://play.google.com/store/apps/details?id=me.danb.retherm",
     "description": "An app to convert between RTD resistance and temperature.",
     "skills": [
       "Android",
       "Java",
       "Thermal Calculation"
-    ]
-  },
-  {
-    "title": "E-bikeshop Ecommerce",
-    "link": "https://www.e-bikeshop.co.uk",
-    "description": "An beautiful online shop selling electric bikes.",
-    "skills": [
-      "PHP",
-      "Web Design",
-      "ElasticSearch"
-    ]
-  },
-  {
-    "title": "E-bikeshop Blog",
-    "link": "https://www.e-bikeshop.co.uk/blog",
-    "description": "The popular blog for e-bikeshop with electric bike news.",
-    "skills": [
-      "Wordpress",
-      "SASS",
-      "HTML",
-      "PHP"
     ]
   }
 ]
